--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
+	"id": "obsidian-fm-tags",
+	"name": "Tags to Front Matter",
+	"version": "0.1.2",
 	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "Moves tags from body into frontmatter for use in static site generators like Blot or Jekyll",
+	"author": "Mikka MD",
+	"authorUrl": "https://mikka.md",
 	"isDesktopOnly": false
 }
